# qbo_self_recognizer

./: CMakeLists.txt  package.xml
src/: qbo_detector.h
